--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ h1 {
   /*border-radius: 50%;*/
   width:100%;
   height:100%;
+  position: fixed;
 
 }
 
@@ -41,7 +42,8 @@ h1 {
 
 
 #ascii1  {
-  position:relative;
+  position:fixed;
+  height: 100%;
 
   }
 
@@ -397,7 +399,7 @@ a:focus {
 
 .section:nth-of-type(odd):not(:first-child) {
   color: #fff;
-  background: #2a282b;
+  /*background: #2a282b;*/
 }
 
 .section--menu {
@@ -677,4 +679,23 @@ a:focus {
   background: #CD7F32;
 }
 
-  
+
+.the--container{
+max-width: 1200px;
+width: 100%;
+margin: auto;
+border: 1px solid #f2f2f2;
+overflow: hidden;
+padding: 0em 0em 2em 0em;
+}
+.article--item{
+float:left;
+background: #f2f2f2;
+width: 24%;
+margin: 0em 0.5% 0.5em 0.5%;
+}
+.article--header{
+height: 200px; 
+background-size: cover;
+background-position: center;
+} 
